# Geant4Losses

./: CMakeLists.txt  README.md  icons.mac  init_gps.mac  init_vis.mac  main.cpp  run_losses.mac  vis.mac
include/: NeutronActionInitialization.hpp  NeutronAnalysis.hpp  NeutronDetectorConstruction.hpp  NeutronEventAction.hpp  NeutronPhysicsList.hpp  NeutronPrimaryGeneratorAction.hpp  NeutronRunAction.hpp  NeutronTargetHit.hpp  NeutronTargetSD.hpp
src/: NeutronActionInitialization.cpp  NeutronDetectorConstruction.cpp  NeutronEventAction.cpp  NeutronPhysicsList.cpp  NeutronPrimaryGeneratorAction.cpp  NeutronRunAction.cpp  NeutronTargetHit.cpp  NeutronTargetSD.cpp
